--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     <button onclick="subscribe()">Subscribe</button>
 
     <script>
-      
       async function subscribe() {
         let sw = await navigator.serviceWorker.ready;
-        sw.pushManager.unsubscribe();
+
+        const pushSubscription = {
+"endpoint":"https://fcm.googleapis.com/fcm/send/euLjsuF3OXI:APA91bFJNEZR0JsYAcJRIs1xHTkVVAbHGWneWmHxLWcCHeuYxjPq5KS8mccUYbQAsqeu0PBYGLZ8YUT_dwL9R0JyfGUpCm4_FeFnm9IrRaDPsP0skxzhoB9EMHi0V7Eyir6Azy7VTa89",
+"expirationTime":null,
+"keys":{"p256dh":"BMnpTClrA-gmOTGRq4U5q6qrPMCZOtMrThdUNqIdOj-O2KVGfQnxV_Tvf6RvqAZmLd2nklvKW6I4Oz3HrRggVoE","auth":"MXXJXl82lWne_aoWzlhl2A"}
+};
+        let unregister = await sw.pushManager.unregister(pushSubscription);
+
         let push = await sw.pushManager.subscribe({
           userVisibleOnly: true,
           applicationServerKey:
-            'BAO9G-9QFq31I8VbiUrm5h9zKGbYAxHeQwGn3SNnzzWngPTlxuLU7vD6KLFLUKPKAkH-ijc55tHhVTX1sd3_sdw'
+            'BBZY7Q3KEtZArAAWMLi_qzWHbH4vAoqPpIXnRhmlUaw0PVs1Kt_2fgLhuaVI5i8MWASBKx3d6W6UoH2U3qChw9U'
         });
         console.log(JSON.stringify(push));
       }
