--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button onclick="subscribe()">Subscribe</button>
+    <button onclick="subscribe()">SubscribeNotifications</button>
 
     <script>
       async function subscribe() {
